--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 ></script>
 
 <script>
-  const MoodContractAddress = 0x2F4C6a19A2896C629212698A777D401870cF8f98;
+  const MoodContractAddress = "0x2F4C6a19A2896C629212698A777D401870cF8f98";
     const MoodContractABI = [
 	{
 		"inputs": [
